Bug 1055653 - Most MediaResource::GetDownloadRate() implementions ignore their out-parameter.  r=cpearce.

--HG--
extra : rebase_source : 67d5000c51740cedaad69fe22797589b6fcd06b4